Fix layout issue on certain resolutions.

--- a/pyconde/skins/pyconde2013/static/css/style.less
+++ b/pyconde/skins/pyconde2013/static/css/style.less
@@ -71,6 +71,9 @@
 @linkColor: @green;
 
 // Bootstrap overrides
+.row {
+  margin-left: 0px;
+}
 // .container {
 //   margin-left: 0;
 //   margin-right: 0;
